<resources>
    <string name="app_name">TestApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="list_screen">List screen</string>
    <string name="checkbox_screen">Checkbox screen</string>
    <string name="remove">Remove item</string>
    <string name="add">Add</string>
    <string name="test">Test</string>
    <string name="app">App</string>
</resources>